--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -15,10 +15,9 @@
     <%= f.label 'Nombre Del Grupo' %><br>
     <%= f.text_field :name, :class => 'form-control'  %>
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <%= f.association :candidate,  :input_html => { :class => 'form-control' }  %>
-
-  </div>
+  </div> -->
   <div class="actions">
     <%= f.submit 'Guardar', :class=>'btn btn-primary' %>
   </div>
