--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,7 @@
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Candidato</th>
+      <!-- <th>Candidato</th> -->
       <th colspan="2">
         <%= link_to new_group_path, :class=>"btn btn-success btn-block" do%>
         <span class="glyphicon glyphicon-plus-sign"></span> Nuevo
@@ -18,7 +18,7 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
-        <td><%= group.candidate.name %></td>
+        <!-- <td><%= group.candidate.name %></td> -->
         <td class="center">
             <%= link_to edit_group_path(group), :class=> 'table-action' do%><span class="glyphicon glyphicon-pencil"></span><%end%>
         </td>
