--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,14 +40,14 @@
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
 	        	<li><%= link_to "Coordinadores", users_path + "?role=coordinador" %></li>
 	        	<li><%= link_to "Grupos", groups_path%></li>
-		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <!--<li><%= link_to "Candidatos", candidates_path %></li>-->
 		        <!-- <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
 		        	<%end %></li> -->
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li>
-		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li>  
+		            <!--<li><%= link_to "Candidatos a Votación",candidate_votations_path %></li>  -->
 		          </ul>
 		        </li>
 	        <% end %>
@@ -55,14 +55,14 @@
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
-		        <li><%= link_to "Candidatos", candidates_path %></li>
+		        <!--<li><%= link_to "Candidatos", candidates_path %></li>-->
 		        <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
 		        	<%end %></li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administración <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li> 
-		            <li><%= link_to "Candidatos a Votación", candidate_votations_path %></li> 
+		            <li><%= link_to "Grupos a Votación", candidate_votations_path %></li> 
 		          </ul>
 		        </li>
 	        <% end %>
