--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 	</script>
 	<script type="text/javascript">
 		window.role = "<%= params[:role] %>";
+		window.uid = "<%= params[:id] %>";
 	</script>
 </head>
 <body>
