--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <hr />
 <br />
 <!--<table class="table table-hover table-bordered table-striped" id="users_table">-->
-<table >  
+<table id="users_table">
   <tdead>
     <tr>
       <th>
