--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,7 @@
 		</div>
 		<div class="col-md-4">
 			<p><b>RNM:</b> <%= @user.rnm %></p>
+			<p><b>Clave del IFE:</b> <%= @user.ife_key %></p>
 			<%if not @user.register_date.nil?%>
 				<p><b>Fecha de Registro:</b> <%= @user.register_date.strftime "%m/%d/%Y" %></p>
 			<%end%>
@@ -35,12 +36,16 @@
 			<%end%>
 		</div>
 		<div class="col-md-4">
-			<p ><b>Seccion:</b><%= @user.section %></p>
+			<p ><b>DtoFed:</b><%= @user.dto_fed.to_i %></p>
+			<p ><b>DtoLoc:</b><%= @user.dto_loc.to_i %></p>
+			<p ><b>Seccion:</b><%= @user.section.to_i %></p>
 			<p><b>Sector: </b><%= @user.sector %></p>
 			<p><b>Código Postal: </b><%= @user.zipcode %></p>
-			<p><b>Calle y Número: </b><%= @user.street_number %></p>
+			<p><b>Calle </b><%= @user.street_number %></p>
+			<p><b>Número Exterior </b><%= @user.outside_number %></p>
+			<p><b>Número Interior</b><%= @user.internal_number %></p>
 			<p><b>Colonia: </b><%= @user.neighborhood %></p>
-			<p><b>Ciudad: </b><%= @user.city %></p>
+			<p><b>Municipio: </b><%= @user.city %></p>
 		</div>
 	</div>
 	<hr />
@@ -50,10 +55,13 @@
 <hr />
 <div class="row">
 	<div class="col-md-12">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14382.847505622154!2d-100.35000321501155!3d25.680844141075344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1407204778020" width="100%" height="180" frameborder="0" style="border:0"></iframe>
+		<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14382.847505622154!2d-100.35000321501155!3d25.680844141075344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1407204778020" width="100%" height="180" frameborder="0" style="border:0"></iframe> -->
+		<div id="containerMapas" style="width:100%;height:380px;overflow:hidden;">
+		</div>
 	</div>
 </div>
 <hr />
+<!-- 
 <div class="row">
 	<div class="col-md-12">
 		<h3>Registro de Votaciones</h3>
@@ -71,3 +79,4 @@
 		</div>
 	<% end %>
 </div>
+ -->
