--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -12,7 +12,9 @@
   </div>
   <div id="container3" class="col-sm-4">
   </div>
-  <div id="container4" class="col-sm-4">
+</div>
+<div class="row">
+  <div id="container4" class="col-sm-12">
   </div>
 </div>
 <hr />
