--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to new_user_path, :class=>"btn btn-success pull-right" do%><span class="glyphicon glyphicon-plus-sign"></span> Nuevo Jugador<%end%>
+<%= link_to new_user_path, :class=>"btn btn-success pull-right" do%>
+  <span class="glyphicon glyphicon-plus-sign"></span> Nuevo Jugador
+<%end%>
 <h2><%= @titles[params[:role]] %></h2>
 <hr />
 <!--<table class="table table-hover table-bordered table-striped" id="users_table">-->
@@ -31,8 +33,7 @@
       <th colspan="1">
         <input type="text" placeholder="neighborhood" class="form-control search" name="neighborhood"/>
       </th>
-      <th></th>
-      <th></th>
+      <th colspan="2"></th>
     </tr>
     <tr>
       <th >
@@ -106,12 +107,11 @@
   </tbody>
 </table>
 </div>
-
 <hr />
 <div class="col-md-12 center">
 	<ul class="pagination">
     <% if @users_t.count >= 10 %>
-      <li class="page_number" data-num="0"><a>Primera</a></li>
+      <li class="page_number active" data-num="0"><a>Primera</a></li>
       <% pages = (@users_t.count / User.per_page).round%>
       <% 10.times.each do |i|%>
     	  <li class="page_number" data-num="<%= i %>"><a> <%=i+1 %></a></li>
