add demo list on message

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,8 @@
 		          <ul class="dropdown-menu" role="menu">
 		            <li><%= link_to "Votaciones", pollings_path %></li>
 		            <!--<li><%= link_to "Candidatos a Votación",candidate_votations_path %></li>  -->
+		            <li><%= link_to new_message_path do %><b>Módulo de Comunicación</b>
+		        	<%end %></li>
 		          </ul>
 		        </li>
 	        <% end %>
