--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -26,8 +26,61 @@
       	</div>
 			<% end %>
 		</div>
-		<table>
-			<%= render template: "militants/index" %>
-		</table> 
+		<!-- <table> -->
+			<% #render template: "militants/index" %>
+		<!-- </table>  -->
+		<table class="table table-hover table-bordered table-striped" id="militants_table">
+		  <thead>
+		    <tr>
+		      <th>RNM</th>
+		      <th>Nombre</th>
+		      <th>Código Postal</th>
+		      <th># Celular</th>
+		      <th>Email</th>
+		      <th>Grupo</th>
+		      <th>Sección</th>
+		      <th></th>
+		    </tr>
+		  </thead>
+
+		  <tbody>
+		    <tr>
+		    	<td>#</td>
+		      <td>Eduardo Williams Hinojosa</td>
+		      <td>#</td>
+		      <td class="cellphone">8180291458</td>
+		      <td>ewilliams@tegik.com</td>
+		      <td>#</td>
+		      <td ></td>
+		    </tr>
+		    <tr>
+		    	<td>#</td>
+		      <td>Jesús Lerma Sánchez</td>
+		      <td>#</td>
+		      <td class="cellphone">8341444418</td>
+		      <td>jlerma@tegik.com</td>
+		      <td>#</td>
+		      <td ></td>
+		    </tr>
+		    <tr>
+		    	<td>#</td>
+		      <td>Miguel Ferringo</td>
+		      <td>#</td>
+		      <td class="cellphone">8110775378</td>
+		      <td>ferrigno_buendia@hotmail.com</td>
+		      <td>#</td>
+		      <td ></td>
+		    </tr>
+		    <tr>
+		    	<td>#</td>
+		      <td>Juanjo José Rdz</td>
+		      <td>#</td>
+		      <td class="cellphone">8116361257</td>
+		      <td>jlerma@tegik.com</td>
+		      <td>#</td>
+		      <td ></td>
+		    </tr>
+		  </tbody>
+	</table>
 	</div>
 </div>
