Remove not from condition

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
 				<dt>Nivel Jerárquico:</dt>
 				<dd><%= @user.role %></dd>
 			</dl>
-			<%if not @user.parent.nil?%>
+			<%if !@user.parent.nil?%>
 				<dl>
 					<% if @user.get_deep < 1 %>
 					<dt>SubEnlace</dt>
