--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,10 +34,10 @@
 				<dt>Celular:</dt>
 				<dd><%= @user.cellphone if @user.cellphone != "0" %></dd>
 			</dl>
-			<a class="btn btn-social btn-twitter" href="<%= @user.fb %>">
+			<a class="btn btn-social btn-twitter" href="<%= @user.tw %>">
 		    <i class="fa fa-twitter"></i> Twitter
 		  </a>
-		  <a class="btn btn-social btn-facebook" href="<%= @user.tw %>">
+		  <a class="btn btn-social btn-facebook" href="<%= @user.fb %>">
 		    <i class="fa fa-facebook"></i> Facebook
 		  </a>
 		</div>
