--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -65,13 +65,13 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label 'Telefono' %><br>
-            <%= f.number_field :phone, class: "form-control only-numbers", max: "9999999999", min:"-9999999999" %>
+            <%= f.number_field :phone, class: "form-control only-numbers"%>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label 'Celular' %><br>
-            <%= f.number_field :cellphone, class: "form-control only-numbers", max: "9999999999", min:"-9999999999"%>
+            <%= f.number_field :cellphone, class: "form-control only-numbers"%>
           </div>
         </div>
       </div>
