--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-md-2">
 			<%= link_to 'Regresar', :back, class: "btn btn-primary btn-large"%>
-			<%= link_to 'Editar', edit_user_path(@user)+"?role=#{params[:role]}", class: 	"btn btn-default btn-large"%>
+			<%= link_to 'Editar', edit_user_path(@user)+"?role=#{@user.role}", class: 	"btn btn-default btn-large"%>
 		</div>
 	</div>
 	<hr/>
