--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,7 @@
 	      	<li><%= link_to "Iniciar Sesión", new_user_session_path%></li> 
 	      <% else %>
 	      	<% if current_user.admin? %> 
+	      		<li><%= link_to "Lista Nominal", nominal_list_path + "?role=" %></li> 
 		        <li><%= link_to "Jugadores", users_path + "?role=jugador" %></li> 
 		        <li><%= link_to "SubEnlaces", users_path + "?role=subenlace" %></li>
 		        <li><%= link_to "Enlaces", users_path + "?role=enlace" %></li>
