--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,43 +54,35 @@
 				<dt>Nivel Jerárquico:</dt>
 				<dd><%= @user.role %></dd>
 			</dl>
-			<%if !@user.parent.nil?%>
 				<dl>
-					<% if @user.get_deep < 1 %>
 						<dt> SubEnlace </dt>
 						<dd>
-							<% if !@user.get_subenlace.nil?  %>
-						 		<%= link_to @user.get_subenlace.name, @user.get_subenlace, 
+							<% if !@user.subenlace_id.nil?  %>
+						 		<%= link_to User.find(@user.subenlace_id).name, @user.get_subenlace, 
 							 		:target => '_blank' %>
 						 	<% else %> 
 							 	No tiene asignado subenlace
 						 	<% end %>
 						</dd>
-					<% end %>
-					<% if @user.get_deep < 2 %>
   					<dt> Enlace </dt>
   					<dd>
-  						<%if !@user.get_enlace.nil? %> 
-	  						<%= link_to @user.get_enlace.name,@user.get_enlace, 
+  						<%if !@user.enlace_id.nil? %> 
+	  						<%= link_to User.find(@user.enlace_id).name,@user.get_enlace, 
 	  						:target =>'_blank' %>
   						<% else %> 
   							No tiene asignado enlace
   						<% end %>
   					</dd>
-  				<% end %>
-  				<% if @user.get_deep < 3 %>
 						<dt> Coordinador </dt>
 						<dd>
-							<%if !@user.get_coordinador.nil? %> 
-								<%= link_to @user.get_coordinador.name, @user.get_coordinador,
+							<%if !@user.coordinador_id.nil? %> 
+								<%= link_to User.find(@user.coordinador_id).name, @user.get_coordinador,
 								:target =>'_blank' %>
 							<% else %> 
 								No tiene asignado coordinador 
 							<% end %>
 						</dd>
-					<% end %>
 				</dl>
-			<%end%>
 		</div>
 		<div class="col-md-2">
 			<dl>
